--- a/ci.bib
+++ b/ci.bib
@@ -32,3 +32,19 @@
   year={2003},
   publisher={ACM}
 }
+
+@article{DBLP:journals/corr/SchoenickCTTE16,
+  author    = {Carissa Schoenick and
+               Peter Clark and
+               Oyvind Tafjord and
+               Peter D. Turney and
+               Oren Etzioni},
+  title     = {Moving Beyond the Turing Test with the Allen {AI} Science Challenge},
+  journal   = {CoRR},
+  volume    = {abs/1604.04315},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1604.04315},
+  timestamp = {Mon, 02 May 2016 18:22:52 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/SchoenickCTTE16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
