Añade artículo de Lenat

--- a/ci.bib
+++ b/ci.bib
@@ -48,3 +48,18 @@
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/SchoenickCTTE16},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@article{LENAT198361,
+title = "Search and Heuristics Eurisko: A program that learns new heuristics and domain concepts",
+journal = "Artificial Intelligence",
+volume = "21",
+number = "1",
+pages = "61 - 98",
+year = "1983",
+note = "",
+issn = "0004-3702",
+doi = "http://dx.doi.org/10.1016/S0004-3702(83)80005-8",
+url = "http://www.sciencedirect.com/science/article/pii/S0004370283800058",
+author = "Douglas B. Lenat",
+
+}
