Añade trabajo Lenat

--- a/ci.bib
+++ b/ci.bib
@@ -63,3 +63,12 @@ url = "http://www.sciencedirect.com/science/article/pii/S0004370283800058",
 author = "Douglas B. Lenat",
 
 }
+
+@article{lenat2016wwts,
+  title={WWTS (What Would Turing Say?).},
+  author={Lenat, Douglas B},
+  journal={AI Magazine},
+  volume={37},
+  number={1},
+  year={2016}
+}
