--- a/ci.bib
+++ b/ci.bib
@@ -72,3 +72,14 @@ author = "Douglas B. Lenat",
   number={1},
   year={2016}
 }
+
+@article{lenat1984and,
+  title={Why AM and EURISKO appear to work},
+  author={Lenat, Douglas B and Brown, John Seely},
+  journal={Artificial intelligence},
+  volume={23},
+  number={3},
+  pages={269--294},
+  year={1984},
+  publisher={Elsevier}
+}
