--- a/ci.bib
+++ b/ci.bib
@@ -83,3 +83,11 @@ author = "Douglas B. Lenat",
   year={1984},
   publisher={Elsevier}
 }
+
+@Misc{felten16:futureAI,
+  author = 	 {Ed Felten},
+  title = 	 {Preparing for the Future of Artificial Intelligence },
+  howpublished = {\url{https://www.whitehouse.gov/blog/2016/05/03/preparing-future-artificial-intelligence}},
+  month = 	 {May},
+  year = 	 2016}
+
